examples/test/testpolicy5871.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5871
  namespace: namespace375
spec:
  podSelector:
    matchLabels:
      key49: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value12
          key16: value29
      podSelector:
        matchLabels:
          key2: value29
          key7: value21
          key15: value23
